// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/ATTRIBUTE.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message PusParameter {
extensions 5 to 105;

  optional ccsds_mal.protobuf.UINTEGER parameterId = 1;
  optional ccsds_mal.protobuf.STRING parameterName = 2;
  optional ccsds_mal.protobuf.ATTRIBUTE value = 3;
  optional pusGroundModel.protobuf.PusElement pusElement = 4;
}
