// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BOOLEAN.proto";
import "../ccsds_mal/INTEGER.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus011Apid.proto";
import "./Pus011Command.proto";
import "./Pus011SubSchedule.proto";


package pusModelEditorMessages.protobuf;

message Pus011Model {
extensions 18 to 118;

  optional ccsds_mal.protobuf.UINTEGER serviceApid = 1;
  optional ccsds_mal.protobuf.UINTEGER status = 2;
  optional ccsds_mal.protobuf.BOOLEAN spaceInNumberOfCommands = 3;
  optional ccsds_mal.protobuf.UINTEGER scheduleStatus = 4;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeScheduleStatus = 5;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeScheduleStatus = 6;
  optional ccsds_mal.protobuf.INTEGER noFreeCommands = 7;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeNoFreeCommands = 8;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeNoFreeCommands = 9;
  optional ccsds_mal.protobuf.INTEGER freeSpace = 10;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeFreeSpace = 11;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeFreeSpace = 12;
  repeated pusModelEditorMessages.protobuf.Pus011Apid pus011Apid = 13;
  repeated pusModelEditorMessages.protobuf.Pus011Command pus011Command = 14;
  repeated pusModelEditorMessages.protobuf.Pus011SubSchedule pus011SubSchedule = 15;
  optional ccsds_mal.protobuf.STRING serviceApidName = 16;
  optional ccsds_mal.protobuf.ULONG uniqueId = 17;
}
