// Produced by Acceleo Protobuf Generator 1.1.2-R8


//////////////////////////////////////////////////////////////////////
// Start of user code HistoryZone
// HISTORY
//
// END-HISTORY
// End of user code HistoryZone
//////////////////////////////////////////////////////////////////////


package pusModelEditor.protobuf;

enum PusInitialisationMode {
  GroundModel = 1;
  CompletedDownlinkLDT = 2;
  CompletedUplinkLDT = 3;
}
