// Produced by Acceleo JavaScript Generator 1.1.0
import "../ccsds_mal/types.proto";



package pusGroundModel.protobuf;

message Pus012MonitoringCheckProperties {
extensions 7 to 107;

  optional ccsds_mal.protobuf.UINTEGER ridStatus = 1;
  optional ccsds_mal.protobuf.UINTEGER actionStatus = 2;
  optional ccsds_mal.protobuf.ATTRIBUTE value = 3;
  optional ccsds_mal.protobuf.UINTEGER rid = 4;
  optional ccsds_mal.protobuf.STRING mask = 5;
  optional ccsds_mal.protobuf.STRING actionName = 6;
}
