// Produced by Acceleo JavaScript Generator 1.1.0
import "../ccsds_mal/types.proto";
import "./Pus013DownlinkLdt.proto";
import "./Pus013UplinkLdt.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus013Model {
extensions 10 to 110;

  optional ccsds_mal.protobuf.UINTEGER noOnGoingDownlinkLDTPacket = 1;
  repeated pusGroundModel.protobuf.Pus013UplinkLdt pUS013UplinkLdt = 2;
  repeated pusGroundModel.protobuf.Pus013DownlinkLdt pUS013DownlinkLdt = 3;
  optional ccsds_mal.protobuf.TIME groundDate = 4;
  optional ccsds_mal.protobuf.UINTEGER apid = 5;
  optional ccsds_mal.protobuf.UINTEGER noOnGoingUplinkLDT = 6;
  optional ccsds_mal.protobuf.UINTEGER noOnGoingDownlinkLDTFile = 7;
  optional ccsds_mal.protobuf.UINTEGER currentUplinkLduIdPosition = 8;
  optional pusGroundModel.protobuf.PusElement pusElement = 9;
}
