// Generated file
import "ccsds_mal/types.proto";
import "pusGroundModel/Pus014ForwardedPacket.proto";


package pusGroundModel.protobuf;

message Pus014HkOrDiagPacket {
extensions 4 to 104;

  optional ccsds_mal.protobuf.UINTEGER subsamplingRatio = 1;
  optional ccsds_mal.protobuf.UINTEGER sid = 2;
  optional pusGroundModel.protobuf.Pus014ForwardedPacket pus014ForwardedPacket = 3;
}
