// Produced by Acceleo JavaScript Generator 1.1.0
import "ccsds_mal/types.proto";
import "pusGroundModel/Pus014EventReportPacket.proto";
import "pusGroundModel/Pus014HkOrDiagPacket.proto";
import "pusGroundModel/Pus014TmPacket.proto";
import "pusGroundModel/PusElement.proto";


package pusGroundModel.protobuf;

message Pus014Model {
extensions 12 to 112;

  repeated pusGroundModel.protobuf.Pus014EventReportPacket pus014EventReportPacket = 1;
  repeated pusGroundModel.protobuf.Pus014HkOrDiagPacket pus014HkPacket = 2;
  repeated pusGroundModel.protobuf.Pus014TmPacket pus014TmPacket = 3;
  optional ccsds_mal.protobuf.TIME groundDate = 4;
  optional ccsds_mal.protobuf.UINTEGER apid = 5;
  repeated pusGroundModel.protobuf.Pus014HkOrDiagPacket pus014DiagPacket = 6;
  optional ccsds_mal.protobuf.UINTEGER noEventReportPackets = 7;
  optional ccsds_mal.protobuf.UINTEGER noDiagPackets = 8;
  optional ccsds_mal.protobuf.UINTEGER noHKPackets = 9;
  optional ccsds_mal.protobuf.UINTEGER noTMPackets = 10;
  optional pusGroundModel.protobuf.PusElement pusElement = 11;
}
