// Generated file
import "ccsds_mal/types.proto";
import "pusGroundModel/Pus019EventAction.proto";
import "pusGroundModel/PusElement.proto";


package pusGroundModel.protobuf;

message Pus019Model {
extensions 7 to 107;

  optional ccsds_mal.protobuf.UINTEGER serviceStatus = 1;
  optional ccsds_mal.protobuf.UINTEGER noOfEventActions = 2;
  repeated pusGroundModel.protobuf.Pus019EventAction pus19EventAction = 3;
  optional ccsds_mal.protobuf.TIME groundDate = 4;
  optional ccsds_mal.protobuf.UINTEGER apid = 5;
  optional pusGroundModel.protobuf.PusElement pusElement = 6;
}
