// Produced by Acceleo JavaScript Generator 1.1.0
import "ccsds_mal/types.proto";
import "pusGroundModel/Pus142FunctionalMonitoring.proto";
import "pusGroundModel/PusElement.proto";


package pusGroundModel.protobuf;

message Pus142Model {
extensions 7 to 107;

  optional ccsds_mal.protobuf.UINTEGER serviceStatus = 1;
  optional ccsds_mal.protobuf.UINTEGER noOfFunctionalMonitoring = 2;
  repeated pusGroundModel.protobuf.Pus142FunctionalMonitoring pus142FunctionalMonitoring = 3;
  optional ccsds_mal.protobuf.TIME groundDate = 4;
  optional ccsds_mal.protobuf.UINTEGER apid = 5;
  optional pusGroundModel.protobuf.PusElement pusElement = 6;
}
